--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@ layout: default
 
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>/
-  Sorry, we can't find that page that you're looking for. You can try again by going <a href="{{ site.baseurl }}">back to the homepage</a>><br>
+  Sorry, we can't find that page that you're looking for. You can try again by going <a href="/">back to the homepage</a>><br>
 
 <img src="{{ site.baseurl }}/assets/images/404.jpg" alt="Constructocat by https://github.com/kikukeii" style="width: 400px;"/>
 
